force-app/main/default/objects/clofor_com_cfs__ConnectKickabckCash__c/fields/clofor_com_cfs__KickbackID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__KickbackID__c</fullName>
    <label>KICKBACK ID</label>
    <referenceTo>clofor_com_cfs__Kickback__c</referenceTo>
    <relationshipName>CONNECT_KICKBACK_CASH</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>