force-app/main/default/objects/clofor_com_cfs__ConnectKickabckCash__c/fields/clofor_com_cfs__KickbackUnpaidBalanceLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__KickbackUnpaidBalanceLocal__c</fullName>
    <label>KICKBACK UNPAID BAL(LOCAL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>