force-app/main/default/objects/clofor_com_cfs__ConnectKickabckCash__c/fields/clofor_com_cfs__UnpaidBalanceKickbackLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UnpaidBalanceKickbackLocal__c</fullName>
    <formula>clofor_com_cfs__KickbackID__r.clofor_com_cfs__UnpaidBalance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UNPAID BALANCE OF KICKBACK(LOCAL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>